project/test/semantics/unit/bad/Bad05_shouldThrowUninitializedValueError.ty
mutable class SomeMutableClass {

    values: {
        someValue: Int = 3;
        someOtherValue: Int;
        anotherValue: Int = 5;
    }
    
    variables: {
        someVariable: Int = 1;
    }
    
    functions: {
        someFunction: () -> Int = 339
    }
}

immutable class SomeImmutableClass {
    
    values: {
        someValue: Int = 3;
        someOtherValue: Int;
        anotherValue: Int = 5;
    }
    
    functions: {
        someFunction: () -> Int = 339
    }
}

singleton class SomeSingletonClass {
    
    values: {
        someValue: Int = 3;
        someOtherValue: Int; // singleton class attributes should be initialized
        anotherValue: Int = 5;
    }
    
    functions: {
        someFunction: () -> Int = 339
    }
    
     actions: {
        someAction: () -> Int = 20
        main: () -> Void = pass
    }
}
